# ChangeLog for dev-ruby/ruby-gconf2
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gconf2/ChangeLog,v 1.5 2004/03/18 23:33:55 agriffis Exp $

*ruby-gconf2-0.9.1 (18 Mar 2004)

  18 Mar 2004; Aron Griffis <agriffis@gentoo.org> ruby-gconf2-0.8.0.ebuild,
  ruby-gconf2-0.9.1.ebuild:
  Mark 0.8.0 stable on alpha, ia64 and x86.  Add version 0.9.1 for bug 44739

*ruby-gconf2-0.8.1 (24 Nov 2003)

  24 Nov 2003; Aron Griffis <agriffis@gentoo.org> ruby-gconf2-0.8.1.ebuild:
  Version bump to 0.8.1

*ruby-gconf2-0.8.0 (18 Nov 2003)

  18 Nov 2003; Aron Griffis <agriffis@gentoo.org> ruby-gconf2-0.8.0.ebuild:
  Version bump to 0.8.0

*ruby-gconf2-0.7.0 (30 Oct 2003)

  30 Oct 2003; Aron Griffis <agriffis@gentoo.org> ruby-gconf2-0.7.0.ebuild:
  Version bump to 0.7.0 for bug 30665, thanks to alex f

*ruby-gconf2-0.5.0 (06 Aug 2003)

  06 Aug 2003; Aron Griffis <agriffis@gentoo.org> metadata.xml,
  ruby-gconf2-0.5.0.ebuild:
  New ebuild based on ruby-gnome2.eclass to satisfy bug 23067
