@@ -1,1 +1,0 @@
-MD5 8601201fb3edb8d5920bd701a7c80d29 ruby-gnome2-0.5.0.tar.gz 620612
