@@ -1,11 +1,12 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gconf2/ruby-gconf2-0.8.1.ebuild,v 1.1 2003/11/24 19:00:22 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gconf2/ruby-gconf2-0.8.1.ebuild,v 1.2 2004/04/12 05:04:17 usata Exp $
 
-inherit ruby-gnome2
+inherit ruby ruby-gnome2
 
 DESCRIPTION="Ruby GConf2 bindings"
 KEYWORDS="~alpha ~x86"
+USE_RUBY="ruby16 ruby18 ruby19"
 DEPEND="${DEPEND} >=gnome-base/gconf-2"
 RDEPEND="${RDEPEND} >=gnome-base/gconf-2
 	>=dev-ruby/ruby-glib2-${PV}"
