@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-gconf2
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gconf2/ChangeLog,v 1.5 2004/03/18 23:33:55 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gconf2/ChangeLog,v 1.6 2004/04/12 05:04:17 usata Exp $
+
+  12 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> ruby-gconf2-0.5.0.ebuild,
+  ruby-gconf2-0.8.1.ebuild, ruby-gconf2-0.9.1.ebuild:
+  Removed 0.5.0. Added ruby.eclass support.
 
 *ruby-gconf2-0.9.1 (18 Mar 2004)
 
